# ccid-transcript-theme-finder

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
example/: main_pipeline.py
src/: README.md
src/ccid_transcript_theme_finder/: __init__.py  pipeline.py
src/ccid_transcript_theme_finder/models/: __init__.py  models.py
src/ccid_transcript_theme_finder/nodes/: bootstrap_condensation.py  context_loader.py  decorators.py  deliberation_processor.py  gemini_processor.py  sentence_mapper.py  sentiment.py  session_processor.py  themes.py  tracer.py
src/ccid_transcript_theme_finder/prompts/: contribution_mapping.txt  facilitator_removal.txt  theme_condensation.txt  theme_generation.txt  theme_refinement.txt  theme_sentiment.txt
